# Backend-II

concurrency_overview/: Makefile  README.md  compose.yml  dockerfile  pyproject.toml
concurrency_overview/src/: db.py
concurrency_overview/src/api/: models.py  run.py  settings.py
concurrency_overview/src/exporter/: run.py
concurrency_overview/src/importer/: run.py
concurrency_overview/src/shared/: db.py  settings.py  utils.py
multithread_multiprocess/: pyproject.toml
multithread_multiprocess/src/multithread_multiprocess/: multiprocess.py  multithread.py
session01/: bubblesort.py  challenge.py  exercise.py  factorial.py  test.py  tutorial.py
session02/: exercise.py
session02/design_patterns_api/: makefile  pyproject.toml
session03/: exercise_1.py  exercise_2.py  exercise_3.py  multitask.py  readingfiles.py  scrapper.py  thread.py  threads.py
session04/: computefactorial.py  multi.py  sumsq.py
session05/: endpoints.py  pyproject.toml
session06/: challenge_async_rate_limiter.py  exercise_async_tasks_timeout.py
session07/: log_messages.py  logger_setup.py  main.py
session08/: exercise.py  factorial.py  test_factorial.py
session09/django_blog/django_blog/: settings.py  urls.py
session09/django_blog/myapp/: models.py  serializers.py  urls.py  views.py
session10/: app.py  tutorial.py
session10/challenge/challenge/: settings.py  urls.py
session11/: challenge_graphql_advanced.py  exercise_graphql_simple_user.py
session12/: calculator.proto  calculator_pb2.py  calculator_pb2_grpc.py  client.py  server.py
session13/: Makefile  challenge.py  compose.yml  pyproject.toml
session13/src/: run.py
session16/: ci.yml
(+13 files in other folders)
