[project]
name = "concurrency-overview"
version = "0.1.0"
description = "A simple API to demonstrate the differences between concurrency models."
authors = [
    {name = "Jorge Alves",email = "jorgeandrealves@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "typer (>=0.15.2,<0.16.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pymongo (>=4.12.0,<5.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]

[project.scripts]
fetch = "importer.run:fetch"
import = "importer.run:import"
export = "exporter.run:export"

[tool.poetry]
packages = [
    { include = "importer", from= "src" },
    { include = "exporter", from = "src" },
    { include = "shared", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
line-length = 120
ignore = ["E501"]
